# aamva-parser-rs

./: Cargo.toml  README.md
aamva-parser-rs/: Cargo.toml  README.md
aamva-parser-rs-cli/: Cargo.toml
aamva-parser-rs-cli/src/: main.rs
aamva-parser-rs/src/: lib.rs
src/: main.rs
