[package]
name = "aamva-parser-rs"
version = "0.1.0"
edition = "2021"
description = "A library to parse RAW AAMVA data from PDF417 barcodes into JSON or YAML."
homepage = "https://github.com/anthonybtedesco/aamva-parser-rs"  # Update with your repository URL
repository = "https://github.com/anthonybtedesco/aamva-parser-rs"  # Update with your repository URL
license = "MIT"  # Specify your license
authors = ["Anthony Tedesco <anthonybtedesco@gmail.com>"]  # Update with your information
keywords = ["aamva", "barcode", "parser", "json", "yaml"]
readme = "README.md"  # Ensure you have a README.md file
documentation = "https://docs.rs/aamva-parser-rs"  # Update with your documentation URL if available

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"

